# aws-loabot

./: CMakeLists.txt  config.cdk.json
.devcontainer/: Dockerfile  devcontainer.json
aws-loabot-handler/: CMakeLists.txt
aws-loabot-handler/include/discord/: discord_client.hpp  discord_context.hpp  discord_handler.hpp  discord_message.hpp  message.hpp
aws-loabot-handler/include/gumbo/: gumbo.hpp
aws-loabot-handler/include/loabot/: handler.hpp  http.hpp  loabot_data.hpp  loabot_discord.hpp  loabot_fetch.hpp  loabot_handler.hpp  loabot_http.hpp  loabot_response.hpp  lostark_fetch.hpp
aws-loabot-handler/src/: discord_client.cpp  loabot_discord.cpp  loabot_fetch.cpp  loabot_handler.cpp  loabot_response.cpp  lostark_fetch.cpp  main.cpp  message.cpp
aws-loabot-router/: CMakeLists.txt  config.json
aws-loabot-router/include/discord/: message.hpp  validate.hpp
aws-loabot-router/include/loabot/: log.hpp  router.hpp
aws-loabot-router/src/: loabot_router.cpp  main.cpp  message.cpp  router.cpp  validate.cpp
aws-loabot-router/test/: CMakeLists.txt  test_router.cpp  test_validate.cpp
cdk/: bot.config.json  package-lock.json  package.json
cdk/lib/: discord-bot.ts  discord-handler.ts  discord-router.ts
cdk/lib/internal/: discord-secretes.ts
